--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1>Webview</h1>
+    <h1>Webview Testing</h1>
     <button onclick="sendMessageToReactNative()">Navigate to React Native Component</button>
 </body>
 
